--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ bin-release/
 *.air
 *.ipa
 *.apk
+**/.idea
+**/target
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
